--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -1,32 +1,94 @@
-<!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" href="css/style.css" type="text/css">
-
+<title>Website</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 </head>
-<body>
-	
-	<div id="title">
-		Jakewp11 HTML5 Android Template
-	</div>
-	<br/>
-	<div class="defaultText">
-		Type your name:<br/>
-		<input id="name" type='text'/>
-		<button id="submit">submit</button>
-	</div>
+<body bgcolor="#FFFFFF" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0">
+<!-- Save for Web Slices (Website.psd) -->
+<table id="Tabelle_01" width="640" height="960" border="0" cellpadding="0" cellspacing="0">
+	<tr>
+		<td colspan="4">
+			<img src="images/index_01.gif" width="640" height="144" alt=""></td>
+	</tr>
+	<tr>
+		<td>
+			<a href="https://www.dropbox.com/s/oyxelojag11o8q3/CCNA1.Chapter01.pdf?dl=0">
+			<img src="images/index_02.gif" width="165" height="152" alt=""></a></td>
+		<td>
+			<a href="https://www.dropbox.com/s/90pl3gbnfu0d9vt/CCNA1.Chapter02.pdf?dl=0">
+			<img src="images/index_03.gif" width="155" height="152" alt=""></a></td>
+		<td>
+			<a href="https://www.dropbox.com/s/wd0h67uribihyq8/CCNA1.Chapter03.pdf?dl=0">
+			<img src="images/index_04.gif" width="157" height="152" alt=""></a></td>
+		<td>
+			<a href="https://www.dropbox.com/s/to5s02rl4jnkglc/CCNA1.Chapter04.pdf?dl=0">
+			<img src="images/index_05.gif" width="163" height="152" alt=""></a></td>
+	</tr>
+	<tr>
+		<td>
+			<img src="images/index_06.gif" width="165" height="30" alt=""></td>
+		<td>
+			<img src="images/index_07.gif" width="155" height="30" alt=""></td>
+		<td>
+			<img src="images/index_08.gif" width="157" height="30" alt=""></td>
+		<td>
+			<img src="images/index_09.gif" width="163" height="30" alt=""></td>
+	</tr>
+	<tr>
+		<td>
+			<a href="https://www.dropbox.com/s/57gzbfml2753vjf/CCNA1.Chapter05.pdf?dl=0">
+			<img src="images/index_10.gif" width="165" height="149" alt=""></a></td>
+		<td>
+			<a href="https://www.dropbox.com/s/wifi1jcynluq8jv/CCNA1.Chapter06.pdf?dl=0">
+			<img src="images/index_11.gif" width="155" height="149" alt=""></a></td>
+		<td>
+			<a href="https://www.dropbox.com/s/h3ra2yz3d6h3vex/CCNA1.Chapter07.pdf?dl=0">
+			<img src="images/index_12.gif" width="157" height="149" alt=""></a></td>
+		<td>
+			<a href="https://www.dropbox.com/s/527r6ry88b6euzu/CCNA1.Chapter08.pdf?dl=0">
+			<img src="images/index_13.gif" width="163" height="149" alt=""></a></td>
+	</tr>
+	<tr>
+		<td>
+			<img src="images/index_14.gif" width="165" height="23" alt=""></td>
+		<td>
+			<img src="images/index_15.gif" width="155" height="23" alt=""></td>
+		<td>
+			<img src="images/index_16.gif" width="157" height="23" alt=""></td>
+		<td>
+			<img src="images/index_17.gif" width="163" height="23" alt=""></td>
+	</tr>
+	<tr>
+		<td>
+			<a href="https://www.dropbox.com/s/juw3o76wiw0mo4f/CCNA1.Chapter09.pdf?dl=0">
+			<img src="images/index_18.gif" width="165" height="149" alt=""></a></td>
+		<td>
+			<a href="https://www.dropbox.com/s/h4vpsexdf03yjn8/CCNA1.Chapter10.pdf?dl=0">
+			<img src="images/index_19.gif" width="155" height="149" alt=""></a></td>
 
-	<div class="defaultText" id="response">
-		
-	</div>
-	
-	
-	
-	
-	
 
-<script type="text/javascript" src="js/jquery.js"></script>
-<script type="text/javascript" src="js/script.js"></script>
-<body>
-
+		<td colspan="2" rowspan="3">
+			<img src="images/index_20.gif" width="320" height="322" alt=""></td>
+	</tr>
+	<tr>
+		<td>
+			<img src="images/index_21.gif" width="165" height="22" alt=""></td>
+		<td>
+			<img src="images/index_22.png" width="155" height="22" alt=""></td>
+	</tr>
+	<tr>
+		<td colspan="2">
+			<img src="images/index_23.gif" width="320" height="151" alt=""></td>
+	</tr>
+	<tr>
+		<td colspan="4">
+			<img src="images/index_24.png" width="640" height="76" alt=""></td>
+	</tr>
+	<tr>
+		<td colspan="4">
+			<img src="images/index_25.gif" width="640" height="64" alt=""></td>
+	</tr>
+</table>
+<!-- End Save for Web Slices -->
+</body>
 </html>
